--- a/src/Sandbox/Views/_ViewImports.cshtml
+++ b/src/Sandbox/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Sandbox
+@using Sandbox.Models
+@using Sandbox.Models.AccountViewModels
+@using Sandbox.Models.ManageViewModels
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
